[gd_scene load_steps=2 format=3 uid="uid://d2x4jfmvfgb2p"]

[ext_resource type="Script" path="res://circle/circle.gd" id="1_4c3ye"]

[node name="Circle" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4c3ye")

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
